# etl-data-streaming

./: .gitignore  CONTRIBUTING.md  ETL_architecture.txt  README.md  pyproject.toml
etl/: ConnectionManager.py  config.yaml  docker-compose.yaml  read_packages_key.text  utils.py
etl/ctrlxbosch/: Dockerfile  mock_server.py  pyproject.toml
etl/dagsterbosch/: Dockerfile  __init__.py  dagster.yaml  pyproject.toml  workspace.yaml
etl/dagsterbosch/.telemetry/: id.yaml
etl/dagsterbosch/history/runs/: 60b2b986-57d0-48cf-839b-504c4d41c338.db  index.db
etl/dagsterbosch/jobs/: __init__.py  etl_jobs.py
etl/dagsterbosch/resources/: __init__.py  database_resources.py  docker_resources.py
etl/dagsterbosch/schedules/: schedules.db
etl/dagsterbosch/sensors/: __init__.py  solace_load_sensor.py  solace_transform_sensor.py
etl/dagsterbosch/src/dagsterbosch/: __init__.py  main.py
etl/dagsterbosch/src/dagsterbosch/jobs/: __init__.py  dummy_job.py  monitor_resources_job.py  test_resources_job.py
etl/dagsterbosch/src/dagsterbosch/resources/: __init__.py  connection_resources.py
etl/dagsterbosch/src/dagsterbosch/schedules/: schedule_monitor.py
etl/dagsterbosch/src/dagsterbosch/sensors/: __init__.py
etl/dagsterbosch/storage/2c4de73d-c3c8-4292-a859-3b477d2dcf58/compute_logs/: jmmwbudg.err  tscstozb.err
etl/dagsterbosch/storage/2cb43b16-cc9a-4f8d-9d53-c7ff0ba36103/compute_logs/: btyhnhjz.err  irisgxps.err  jkqartvd.err
etl/dagsterbosch/storage/5fc6a03a-deee-4f5c-a4e2-c2b4508aa8fa/compute_logs/: caifdphw.err  gtzadzjd.err  jmtpackv.err
etl/dagsterbosch/storage/60b2b986-57d0-48cf-839b-504c4d41c338/compute_logs/: ndabhzno.err  ndabhzno.out
etl/dagsterbosch/storage/f8284a25-8f9e-4474-b41a-1b55105f7f53/compute_logs/: diicfxoh.err  uaiauwvi.err  wjuvxugq.err
etl/extractbosch/: Dockerfile  extract.py  pyproject.toml
etl/grafana_querys/: graph.sql
etl/loadbosch/: Dockerfile  load.py  pyproject.toml
etl/postgresbosch/: Dockerfile  init-entrypoint.sh  init.sql  pivot-test.sql  register_cron_jobs.sql  update_pivot_functions.sql
etl/solacebosch/: solace_start.sh
etl/telegrafbosch/: telegraf.conf
etl/transformbosch/: Dockerfile  format.yaml  pyproject.toml  transform.py
images/: Flowchart.drawio  dataflows.drawio  image.drawio  sequencediagram.drawio  workflow.md
src/: 1_connection opcua get nodes.ipynb  nodos_opcua_LR.json  nodos_opcua_LR2.json  nodos_opcua_LR3.json  opcua_nodes_automax600_1.json  opcua_nodes_automax600_2.json  opcua_nodes_modernhydraulics.json
