[tool.poetry]
name = "dagsterbosch"
version = "0.0.1"
description = "Dagster server for ETL orchestration"
authors = ["Manuel Caipo <manuel.caipo@boschrexroth.de>"]
packages = [ { include = "dagsterbosch", from = "src" } ]

[tool.poetry.dependencies]
python = "3.10.11"

dagster = "^1.10.2"
dagster-webserver = "^1.10.2"
dagster-postgres = "^0.26.2"
dagster-docker = "^0.26.2"
pydantic = "^2.0.0"

# pydantic = {version = "^2.10.6", allow-prereleases = true}

pyyaml = "^6.0.1"
typing-extensions = "^4.12.2"
paho-mqtt = "^2.1.0"
solace-pubsubplus = "1.8.0"
opcua = "^0.98.13"
psycopg = {version = "^3.2.4", extras = ["binary"]}
sqlalchemy = "^2.0.21"
cryptography = "^44.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
