[tool.poetry]
name = "loadbosch"
version = "0.0.1"
description = "Load data from Solace into Oracle database"
authors = ["Manuel Caipo <manuel.caipo@boschrexroth.de>"]

[tool.poetry.dependencies]
python = "3.10.11"
oracledb = "^1.3.3"
sqlalchemy = "^2.0.21"
alembic = "^1.11.2"
pandas = ">=1.5.0,<2.1.0"
loguru = "^0.7.0"
pyyaml = "^6.0.2"
psycopg = {extras = ["binary"], version = "^3.2.4"}
cryptography = "^44.0.0"
dagster = "^1.9.10"
dagster-webserver = "^1.9.10"
dagster-postgres = "^0.25.10"
dagster-docker = "^0.25.10"
paho-mqtt = "^2.1.0"
solace-pubsubplus = "1.8.0"
cx-oracle = "^8.3.0"
opcua = "^0.98.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
