[tool.poetry]
name = "transformbosch"
version = "0.0.1"
description = "Transform data consumed from Solace"
authors = ["Manuel Caipo <manuel.caipo@boschrexroth.de>"]

[tool.poetry.dependencies]
python = "3.10.11"
pandas = ">=1.5.0,<2.1.0"
numpy = ">=1.26.0,<2.1.0"
scikit-learn = ">=1.3.0,<1.4.0"
scipy = ">=1.11.0,<1.12.0"
loguru = "^0.7.0"
pyyaml = "^6.0.2"
psycopg = {extras = ["binary"], version = "^3.2.4"}
sqlalchemy = "^2.0.37"
cryptography = "^44.0.0"
dagster = "^1.9.10"
dagster-webserver = "^1.9.10"
dagster-postgres = "^0.25.10"
dagster-docker = "^0.25.10"
paho-mqtt = "^2.1.0"
solace-pubsubplus = "1.8.0"
opcua = "^0.98.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
